# Fungible-token

./: Cargo.toml  README.md  dfx.json
src/fungible-token-backend/: Cargo.toml  fungible-token-backend.did
src/fungible-token-backend/src/: lib.rs
